        - Renamed AnyEvent::IRC::Client::Connection to AnyEvent::IRC::Client
        - Implemented prefix<=>mode mapping for nicks
        - Added test utility module and first automated connect test
        - Added debug_console example
        - Added mode tracking for users on channels, with NAMESX support
        - channel_list() now also optionally accepts the channel as first argument
        - the connect method of AnyEvent::Client now accepts an additional parameter
          where you can pass the register information for automatic registration.
        - the 'registered' event is now only emitted when the irc
          commands 376 or 422 have been seen.

0.5     Sun Mar 11 23:54:10 CET 2007
        - added server password support
        - fixed a bug with nick-changing
        - added topic support
        - fixed problem in prefix matching
        - fixed a bug where channel_add was called with already
          joined nicks, these duplicates are now prevented.
        - found a bug in prefix_host with the tests
        - added some tests
        - disconnect now also does send channel_add/remove events
        - enhanced connection handling a bit
        - added connect and connect_error events to Net::IRC3::Connection
        - fixed a bug where too many channel_remove events were generated on QUIT
        - fixed case handling with channels
        - added functionality to change the nick automatically
          when it is already taken when registering an IRC connection.
          (Net::IRC3::Client::Connection)
        - added reply number <=> reply name mapping to Net::IRC3::Util
          accessible through rfc_code_to_name
        - added error event to Net::IRC3::Client::Connection
        - fixed bugs in nick handling and added support for the NICK
          change command in Net::IRC3::Client::Connection
        - Net::IRC3::Client::Connection->channel_list now returns channel and nick
          information in the servers cAsE.